src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

/* Note: currently not used */
.App-header {
  background-color: #282c34;

  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  padding-left: 10px;
  /* color: white; */
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

/* @import "~antd/dist/antd.css"; */
/* @import "~antd/dist/reset.css"; */

.site-layout-content {
  /* min-height: 280px; */
  padding: 12px 6px;
  /* background: #fff; */
}

.logo {
  float: left;
  width: 120px;
  height: 31px;
  margin: 16px 24px 16px 0;
  background: rgba(255, 255, 255, 0.3);
}
.ant-row-rtl .logo {
  float: right;
  margin: 16px 0 16px 24px;
}

#components-layout-demo-top .logo {
  float: left;
  width: 120px;
  height: 31px;
  margin: 16px 24px 16px 0;
  background: rgba(255, 255, 255, 0.3);
}
.ant-row-rtl #components-layout-demo-top .logo {
  float: right;
  margin: 16px 0 16px 24px;
}

div.iracelog-standings th,
div.iracelog-standings td {
  padding-right: 2px !important;
  padding-left: 2px !important;
  padding-top: 2px !important;
  padding-bottom: 2px !important;
}

div.iracelog-compact th,
div.iracelog-compact td {
  padding-right: 4px !important;
  padding-left: 4px !important;
  padding-top: 4px !important;
  padding-bottom: 4px !important;
}

div.iracelog-stint-summary th,
div.iracelog-stint-summary td {
  padding-right: 4px !important;
  padding-left: 4px !important;
  padding-top: 4px !important;
  padding-bottom: 4px !important;
}

div.iracelog-standings-select-cols th,
div.iracelog-standings-select-cols td {
  padding-top: 1px !important;
  padding-bottom: 1px !important;
}

div.iracelog-stint-tooltip {
  /* background-color: #24c6f3; */
}

div.iracelog-background-checkered {
  height: 40px;
  width: 40px;

  background: #eee
    url('data:image/svg+xml,\
     <svg xmlns="http://www.w3.org/2000/svg" width="400" height="400" fill-opacity=".75" >\
              <rect x="200" width="200" height="200" />\
              <rect y="200" width="200" height="200" />\
              </svg>');
  background-size: 15px 15px;
  background-position: center;
}

div.iracelog-background-green {
  height: 40px;
  width: 40px;
  background-color: green;
}

div.iracelog-event-description {
  /* color: rgba(0, 0, 0, 0.45); */
}

tr.standings-light-out {
  background-color: silver;
  font-style: italic;
}

tr.standings-light-pit {
  background-color: beige;
}
tr.standings-light-slow {
  background-color: coral;
}

tr.standings-dimmed-out {
  background-color: rgb(101, 94, 94);
  font-style: italic;
}

tr.standings-dimmed-pit {
  background-color: rgb(138, 138, 116);
}
tr.standings-dimmed-slow {
  background-color: coral;
}

tr.standings-dark-out {
  background-color: rgb(101, 94, 94);
  font-style: italic;
}

tr.standings-dark-pit {
  background-color: rgb(138, 138, 116);
}
tr.standings-dark-slow {
  background-color: coral;
}
tr.standings-selected {
  font-weight: bold;
}

